[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "td-parser-pro"
version = "0.1.0"
description = "Extract and normalize financial data from TD Business Solutions Visa PDF statements."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Rayhan Muktader", email = "rmuktader@gmail.com" }
]
keywords = ["td bank", "pdf", "finance", "statement", "parser", "accounting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pdfplumber>=0.11",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/rmuktader/td-parser-pro"

[tool.hatch.build.targets.wheel]
packages = ["src/td_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
