[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccparse"
version = "0.1.1"
description = "Parse credit card PDF statements into structured financial data. Currently supports TD Business Solutions Visa."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Rayhan Muktader", email = "rmuktader@gmail.com" }
]
keywords = ["credit card", "pdf", "finance", "statement", "parser", "accounting", "td bank"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pdfplumber>=0.11",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/rmuktader/ccparse"

[tool.hatch.build.targets.wheel]
packages = ["src/ccparse"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
